@@ -66,16 +66,17 @@ abstract public class HTTPAuthUtil
     //////////////////////////////////////////////////
     // URL Decomposition
 
+    /*
     static URI decompose(String suri)
             throws HTTPException
     {
         try {
-            URI uri = new URI(suri);
+            URI uri = HTTPUtil.parseToURI(suri);
             return uri;
         } catch (URISyntaxException use) {
             throw new HTTPException("HTTPAuthUtil: illegal url: " + suri);
         }
-    }
+    } */
 
     /**
      * Create an AuthScope from a URL; pull out any principal
@@ -92,7 +93,7 @@ abstract public class HTTPAuthUtil
         if(surl == null)
             throw new HTTPException("Null argument");
         try {
-            URI uri = HTTPAuthUtil.decompose(surl);
+            URI uri = HTTPUtil.parseToURI(surl);
             AuthScope scope = new AuthScope(uri.getHost(),
                     uri.getPort(),
                     HTTPAuthUtil.makerealm(uri.toURL()),
@@ -100,7 +101,7 @@ abstract public class HTTPAuthUtil
             return scope;
         } catch (IllegalArgumentException e) {
             return null;
-        } catch (MalformedURLException mue) {
+        } catch (URISyntaxException | MalformedURLException mue) {
             throw new HTTPException(mue);
         }
     }
@@ -112,9 +113,9 @@ abstract public class HTTPAuthUtil
         return urlToScope(surl, ANY_SCHEME);
     }
 
-    static public URL
-    scopeToURL(AuthScope scope)
-            throws HTTPException
+    static public URI
+    scopeToURI(AuthScope scope)
+        throws HTTPException
     {
         try {
             String scheme = scope.getScheme();
@@ -124,9 +125,9 @@ abstract public class HTTPAuthUtil
                 scheme = "https";
             else
                 scheme = "http";
-            URL url = new URL(scheme, scope.getHost(), scope.getPort(), "");
+            URI url = new URI(scheme, null, scope.getHost(), scope.getPort(), "",null,null);
             return url;
-        } catch (MalformedURLException mue) {
+        } catch (URISyntaxException mue) {
             throw new HTTPException(mue);
         }
     }
